--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
                 <div class="row gx-4 gx-lg-5 justify-content-center">
                     <div class="col-md-10 col-lg-8 col-xl-7">
                         <div class="site-heading">
-                            <h1>Software Testing Blog</h1>
-                            <span class="subheading">A Blog for Software Testing</span>
+                            <h1>STLCpro</h1>
+                            <span class="subheading">A Blog for Software Testing Life Cycle</span>
                         </div>
                     </div>
                 </div>
