updated home image

--- a/screenshot.html
+++ b/screenshot.html
@@ -71,9 +71,11 @@
                     screenshot at the time of failure without having to go through the logs dump.</p>
 
                 <p>In this article we are going to discuss the following:
-                    * How to take screenshots using selenium
-                    * situations where selenium fails to take a screenshot
-                    * How to take a screenshot with only java code without using selenium
+                <ul>
+                    <li>How to take screenshots using selenium</li>
+                    <li>situations where selenium fails to take a screenshot</li>
+                    <li>How to take a screenshot with only java code without using selenium</li>
+                </ul>
                 </p>
 
                 <h2 class="section-heading">Take a screenshot using selenium</h2>
@@ -97,10 +99,13 @@
 
                 <p>Most of the time taking screenshot using selenium are more than enough. But in some cases selenium
                     won't be able to take the screenshot.</p>
-                * When browser window went not responding state
-                * When the driver object got killed because of some issue
-                * In case of Mobile automation test cases, when the device rejects appium driver access because of
-                some administrator app takes control of the device
+                <ul>
+                    <li>When browser window went not responding state</li>
+                    <li>When the driver object got killed because of some issue</li>
+                    <li>In case of Mobile automation test cases, when the device rejects appium driver access because of
+                        some administrator app takes control of the device
+                    </li>
+                </ul>
 
                 <p>In most companies, mobile devices provided for executing automation test cases are managed by the
                     company itself. And they can access the device by using some schedulers or using some backend users.
