updated home image

--- a/screenshot.html
+++ b/screenshot.html
@@ -216,7 +216,7 @@ public void captureScreen(String fileName) throws Exception {
                         </a>
                     </li>
                 </ul>
-                <div class="small text-center text-muted fst-italic">Copyright &copy; Your Website 2023</div>
+                <div class="small text-center text-muted fst-italic">Copyright &copy; www.STLCpro.com 2024</div>
             </div>
         </div>
     </div>
