added link to mail

--- a/pages/about.html
+++ b/pages/about.html
@@ -66,7 +66,8 @@
                     <li>As a senior consultant, I have helped multiple clients by implementing functional UI automation
                         tests for browsers & mobile apps by using tools Selenium & Appium.
                     </li>
-                    <li>As a principal consultant, I have helped clients with their Testing process assessment, thereby the
+                    <li>As a principal consultant, I have helped clients with their Testing process assessment, thereby
+                        the
                         betterment of their testing process.
                     </li>
                     <li>Delivered multiple projects in Test lead role.</li>
@@ -75,7 +76,8 @@
 
                 <p>I get excited about opportunities where I get to improve myself by learning new things & to work in a
                     good team environment.</p>
-                <p>I love connecting with new people, you can reach me at hemasundar.penugonda@protonmail.com</p>
+                <div>I love connecting with new people, you can reach me at <a
+                        href="mailto:hemasundar.penugonda@protonmail.com">hemasundar.penugonda@protonmail.com</a></div>
 
             </div>
         </div>
