added link to mail

--- a/pages/thread_local.html
+++ b/pages/thread_local.html
@@ -175,8 +175,8 @@
     }
 }</code></pre>
 
-                <pre><code class="language-txt">
-Console output is similar to:
+                <h3 class="section-sub-heading">Log output</h3>
+                <pre><code class="language-log">Console output is similar to:
 log4j:WARN [] should be System.out or System.err.
 log4j:WARN Using previously set target, System.out by default.
 [TestNG] Running:
